Fix frontend and add translation and prepare mock data in backend for testing